Initial commit of Tokenizer

--- a/src/Nitro.Parser/Nitro.Parser.csproj
+++ b/src/Nitro.Parser/Nitro.Parser.csproj
@@ -6,4 +6,9 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+        <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+            <_Parameter1>Nitro.Parser.Tests</_Parameter1>
+        </AssemblyAttribute>
+    </ItemGroup>
 </Project>
